--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,28 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.14
+aiosignal==1.3.2
+anyio==4.9.0
+attrs==25.3.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+curlify==2.2.1
+facebook_business==22.0.2
 fastapi==0.95.0
+frozenlist==1.5.0
+h11==0.14.0
+idna==3.10
+MarkupSafe==3.0.2
+multidict==6.2.0
+propcache==0.3.1
+pycountry==24.6.1
+pydantic==1.10.21
+python-multipart==0.0.6
+requests==2.32.3
+six==1.17.0
+sniffio==1.3.1
+starlette==0.26.1
+typing_extensions==4.13.0
+urllib3==2.3.0
 uvicorn==0.22.0
-jinja2==3.1.2
+yarl==1.18.3
